namespace GalleryFound.Models;

public class ShopUriPair
{
    public Shops Shop { get; set; }

    public string Uri { get; set; }
}
